[gd_scene load_steps=3 format=3 uid="uid://b8ok23xnxmv7x"]

[ext_resource type="FontFile" uid="uid://bekx6hqayb3x" path="res://alfont_com_Sp_Mina_p30download.com_.ttf" id="1_g0jqj"]
[ext_resource type="Script" path="res://Pause/pause_menu.gd" id="1_s0cv3"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s0cv3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = -23.0
offset_top = -14.0
offset_right = 548.0
offset_bottom = 331.0
color = Color(0.141176, 0.141176, 0.141176, 0.643137)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -91.0
offset_right = 82.5
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.265361, 0.265361, 0.265361, 1)
theme_override_fonts/font = ExtResource("1_g0jqj")
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="retry" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.265361, 0.265361, 0.265361, 1)
theme_override_fonts/font = ExtResource("1_g0jqj")
theme_override_font_sizes/font_size = 50
text = "Retry"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.265361, 0.265361, 0.265361, 1)
theme_override_fonts/font = ExtResource("1_g0jqj")
theme_override_font_sizes/font_size = 50
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
